added functionallity to "add account" button

--- a/server/dashboard.hbs
+++ b/server/dashboard.hbs
@@ -227,16 +227,18 @@
                                     </div>
                                 {{/each}}
 
-                                <fieldset
-                                    class="svg-hover h-full w-full flex gap-6 rounded-lg grid-cols-2 border p-4 bg-background items-center justify-center cursor-pointer"
-                                >
-                                    <legend class="-ml-1 px-1 text-sm font-medium">Add account</legend>
-                                    <svg viewBox="0 0 24 24" class="opacity-50">
-                                        <circle cx="12" cy="12" r="10" />
-                                        <path d="M8 12h8" />
-                                        <path d="M12 8v8" />
-                                    </svg>
-                                </fieldset>
+                                <a href="/admin" target="_blank">
+                                    <fieldset
+                                        class="svg-hover h-full w-full flex gap-6 rounded-lg grid-cols-2 border p-4 bg-background items-center justify-center cursor-pointer"
+                                    >
+                                        <legend class="-ml-1 px-1 text-sm font-medium">Add account</legend>
+                                        <svg viewBox="0 0 24 24" class="opacity-50">
+                                            <circle cx="12" cy="12" r="10" />
+                                            <path d="M8 12h8" />
+                                            <path d="M12 8v8" />
+                                        </svg>
+                                    </fieldset>
+                                </a>
                             </main>
                         </div>
                     </div>
