--- a/server/views/dashboard.hbs
+++ b/server/views/dashboard.hbs
@@ -284,5 +284,7 @@
                 image.src = image.src + "?" + new Date().getTime();
             });
         </script>
+
+        <script defer src="/_vercel/insights/script.js"></script>
     </body>
 </html>
