--- a/server/views/dashboard.hbs
+++ b/server/views/dashboard.hbs
@@ -6,7 +6,7 @@
         <link rel="icon" href="./public/logo.svg" type="image/svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link href="./public/tailwind.css" rel="stylesheet" />
+        <link href="./public/output.css" rel="stylesheet" />
         <link href="./public/style.css" rel="stylesheet" />
         <title>bot dashboard</title>
 
@@ -211,7 +211,7 @@
                                                     {{/if}}
                                                 </div>
                                             </div>
-                                            <div class="grid gap-3">
+                                            <div class="grid gap-3 items-start h-fit">
                                                 <label
                                                     class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
                                                     for="temperature"
